# KDocker

./: .bzrignore  .gitattributes  .gitignore  AUTHORS  BUGS  CMakeLists.txt  CREDITS  ChangeLog  INSTALL  README  README.md  TODO  VERSION  kdocker.desktop  kdocker.pro  snapcraft.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  flatpak.yml  package.yml  snap.yml
debian/: changelog  control  copyright  docs  menu  rules
helpers/: kdocker  kdocker.1  kdocker.desktop  kdocker.pod  kdocker_man.sh
helpers/appdata/: kdocker.appdata.xml  kdocker.appdata.xml.in
i18n/: base.ts  kdocker_it_IT.ts
resources/: dbus.kdocker.xml  resources.qrc
resources/appdata/: kdocker.appdata.xml.in
resources/appstream/: com.kdocker.KDocker.metainfo.xml.in  kdocker.metainfo.xml.in
resources/dbus/: com.kdocker.KDocker.service.in  com.kdocker.KDocker.xml  kdocker.xml
resources/desktop/: com.kdocker.KDocker.desktop
resources/flatpak/: com.kdocker.KDocker.yml
resources/i18n/: pl.qm  pl.ts
resources/man/: kdocker.pod
resources/snap/: snapcraft.yaml
solutions/qtsingleapplication/: qtsingleapplication.pri
src/: .clang-format  adaptor.h  application.cpp  application.h  command.cpp  command.h  commandlineargs.cpp  commandlineargs.h  constants.cpp  constants.cpp.in  constants.h  embedcontainer.cpp  embedcontainer.h  grabinfo.cpp  grabinfo.h  kdocker.cpp  kdocker.h  main.cpp  mwmutil.h  myXlib.h  scanner.cpp  scanner.h  scannersearch.cpp  scannersearch.h  trayitem.cpp  trayitem.h  trayitemconfig.cpp  trayitemconfig.h  trayitemmanager.cpp  trayitemmanager.h  trayitemoptions.cpp  trayitemoptions.h  trayitemsettings.cpp  trayitemsettings.h  util.cpp  util.h  xcbeventreceiver.cpp  xcbeventreceiver.h  xlibtypes.h  xlibutil.cpp  (+1 more)
